// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalCounter snapshot 1`] = `
<div>
  <h4>
    Local counter : 
  </h4>
  <button
    onClick={undefined}
  >
    -
  </button>
  <button
    onClick={undefined}
  >
    +
  </button>
</div>
`;

exports[`ReduxCounter snapshot 1`] = `
<div>
  <h4>
     Redux counter :  
  </h4>
  <button
    onClick={[Function]}
  >
    -
  </button>
  <button
    onClick={[Function]}
  >
    +
  </button>
</div>
`;
